// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DelayTip render: default 1`] = `
<div>
  <div
    data-testid="inner"
  />
</div>
`;

exports[`DelayTip render: not open 1`] = `
<div>
  <div
    data-testid="inner"
  />
</div>
`;

exports[`DelayTip render: open 1`] = `
<div>
  <div
    class="ant-tooltip-open"
    data-testid="inner"
  />
</div>
`;
